@@ -3,6 +3,7 @@
 * Fix bug where generic validation failure messages did not make it into the REST response
 * Relax requirement for email event handlers to have active/inactive/escalation recipients.  If no recipients exist then no email is sent.
 * Fix backup work items race conditions in system settings listeners
+* Publishers now publish attribute changes if configured to during snapshot send
 
 *Version 3.5.0*
 * Adding data point tags to email template model
